성능개선 실패