@@ -7,13 +7,11 @@ import org.example.howareyou.domain.vocabulary.dto.AggregatedWordEntry;
 import org.example.howareyou.domain.vocabulary.repository.DictionaryDataRepository;
 import org.example.howareyou.domain.vocabulary.service.MemberVocaBookService;
 import org.springframework.data.domain.Page;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
 import java.security.SecureRandom;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 /**
@@ -26,27 +24,43 @@ public class DistractorService {
     private final DictionaryDataRepository dictionaryDataRepository;
     private final MemberVocaBookService memberVocabularyService;
     private final MemberService memberService;
+    private final RedisTemplate<String, Object> redisTemplate;
 
     private static final SecureRandom RND = new SecureRandom();
+    private static final String DICT_CACHE_KEY = "quiz:distractors:bcPool";
 
+    /**
+     * 퀴즈 오답 선택지 생성
+     */
     public List<String> pickDistractors(String correctWord,
                                         Set<String> userAnswerPool,
                                         int totalQuestions,
                                         String membername) {
 
-        //  B, C 레벨 오답 후보 불러오기
-        String lang = memberService.getMemberByMembername(membername).getProfile().getLanguage(); // TODO: 더 좋은방식있으면 바꿀예정
-        List<DictionaryData> bcWords = dictionaryDataRepository
-                .findByLevel(List.of("b1","b2","c1","c2"),lang );
-        // 오답 후보풀 생성
-        List<String> available = bcWords.stream()
-                .map(DictionaryData::getWord)
+        //사전에서 BC 단어 오답풀 가져오기
+        String lang = memberService.getMemberByMembername(membername).getProfile().getLanguage();
+        String cacheKey = DICT_CACHE_KEY + ":" + lang;
+
+        // 강제캐스팅 경고 무시하기위한 어노테이션
+        @SuppressWarnings("unchecked")
+        List<String> bcPool = (List<String>) redisTemplate.opsForValue().get(cacheKey);
+
+        if (bcPool == null || bcPool.isEmpty()) {
+            bcPool = dictionaryDataRepository.findByLevel(List.of("b1", "b2", "c1", "c2"), lang)
+                    .stream()
+                    .map(DictionaryData::getWord)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+            redisTemplate.opsForValue().set(cacheKey, bcPool);
+        }
+
+        //  Dictionary 에서 가져오기
+        List<String> available = bcPool.stream()
                 .filter(w -> !userAnswerPool.contains(w))
                 .filter(w -> !w.equalsIgnoreCase(correctWord))
-                .distinct()
                 .collect(Collectors.toList());
 
-        // 오답선택지 3개미만? 에러
+        // 오답 후보가 부족할 경우 사용자 단어장에서 보충
         if (available.size() < 3) {
             Page<AggregatedWordEntry> userPage =
                     memberVocabularyService.findLatestUniqueWordsPaged(membername, null, null, 0, 1000);
@@ -56,15 +70,33 @@ public class DistractorService {
                     .filter(Objects::nonNull)
                     .filter(w -> !userAnswerPool.contains(w))
                     .filter(w -> !w.equalsIgnoreCase(correctWord))
-                    .toList();
+                    .collect(Collectors.toList());
 
             available.addAll(userWords);
-            available = available.stream().distinct().toList();
+            available = available.stream().distinct().collect(Collectors.toList());
         }
 
+        // 랜덤 인덱스 3개 선택(오답선택지)
+        return pickRandom(available, 3);
+    }
 
-        //  랜덤 3개 리턴
-        Collections.shuffle(available, RND);
-        return available.stream().limit(3).toList();
+    /**
+     * 주어진 리스트에서 랜덤하게 limit 개 추출
+     */
+    private List<String> pickRandom(List<String> pool, int limit) {
+        if (pool.size() <= limit) {
+            return new ArrayList<>(pool);
+        }
+
+        Set<Integer> picked = new HashSet<>();
+        List<String> result = new ArrayList<>(limit);
+
+        while (result.size() < limit) {
+            int idx = RND.nextInt(pool.size());
+            if (picked.add(idx)) {
+                result.add(pool.get(idx));
+            }
+        }
+        return result;
     }
 }
